--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,17 @@
     "David S Miller"
   ],
   "license": "MIT",
-  "moduleType": [],
+  "moduleType": [
+    "es6"
+  ],
   "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "parr/bower_components"
   ],
   "dependencies": {
     "angular2": "^2.0.0-beta.9"
